--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "export": "next export",
+    "preview": "serve out",
+    "start": "wrangler pages dev --kv BENCHMARK --persist --compatibility-date=2023-01-17 -- next dev",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,5 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20221111.1"
   }
 }
