--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,5 +8,6 @@
         "types": [
             "@cloudflare/workers-types"
         ]
-    }
+    },
+    "include": ["**/*.ts", "../types/**.d.ts"]
 }
