--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
     "chart.js": "^4.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -22,10 +19,16 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.0",
-    "typescript": "4.9.4"
+    "styled-components": "^5.3.6",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20221111.1"
+    "@cloudflare/workers-types": "^4.20221111.1",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "prettier": "2.8.4",
+    "typescript": "4.9.4"
   }
 }
