--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-select": "^1.2.0",
+    "@radix-ui/react-switch": "^1.0.1",
     "chart.js": "^4.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
