--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
     "prettier": "npx prettier -w ."
   },
   "dependencies": {
-    "@next/font": "13.1.2",
+    "@next/font": "^13.1.6",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-switch": "^1.0.1",
-    "chart.js": "^4.1.2",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
-    "react": "18.2.0",
+    "chart.js": "^4.2.1",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "^13.1.6",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "swr": "^2.0.0"
+    "swr": "^2.0.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20221111.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@cloudflare/next-on-pages": "^0.3.0",
+    "@cloudflare/workers-types": "^4.20230214.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
-    "prettier": "2.8.4",
-    "typescript": "4.9.4"
+    "babel-plugin-styled-components": "^2.0.7",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5",
+    "vercel": "^28.16.2"
   }
 }
