--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
-    "start": "vite preview",
+    "preview": "vite preview --port 3000",
     "prettier": "npx prettier -w ."
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-select": "^1.2.0",
-    "@radix-ui/react-switch": "^1.0.1",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6",
-    "swr": "^2.0.3"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
