--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "chart.js": "^4.2.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
@@ -19,6 +20,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
